--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,8 +3,7 @@ name: 'Terraform'
 on:
   push:
     branches: [ "main" , "feature/**" ]
-  pull_request:
-
+    
 jobs:
   terraform:
     name: 'Terraform'
@@ -14,6 +13,12 @@ jobs:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v3
+
+    - name: Install Terraform
+      uses: little-core-labs/install-terraform@v2.0.0
+      with:
+        version: 1.13.0
+              
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: HashiCorp - Setup Terraform
