--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,9 +36,11 @@ jobs:
       run: terraform init
 
     # Checks that all Terraform configuration files adhere to a canonical format
-    - name: Terraform Format
-      run: terraform fmt -check
-
+    # - name: Terraform Format
+    #   run: terraform fmt -check
+    - name: terraform Validate
+      run: terraform validate
+      
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: terraform plan -input=false
