--- a/.github/workflows/terra-workflow.yml
+++ b/.github/workflows/terra-workflow.yml
@@ -1,8 +1,11 @@
 name: terra-infra
 
-
 on:
   workflow_dispatch:
+
+permissions:
+  id-token: write
+  contents: read 
 
 jobs:
   terraform-init-plan:
