--- a/.github/workflows/terra-workflow.yml
+++ b/.github/workflows/terra-workflow.yml
@@ -21,6 +21,9 @@ jobs:
 
     - name: Checkout
       uses: actions/checkout@v5.0.0
+      with:
+        persist-credentials: false
+        clean: false  # Optional
 
     - name: Terraform fmt
       id: fmt
