--- a/.github/workflows/terra-workflow.yml
+++ b/.github/workflows/terra-workflow.yml
@@ -31,3 +31,7 @@ jobs:
     - name: Terraform Init
       id: init
       run: terraform init -input=false
+
+    - name: Terraform Plan
+      id: plan
+      run: terraform plan -no-color -input=false
